versioned_docs/version-0.9.21/02-support.md
# Support & community

If you get stuck, you can get support through our Github community. The authors of Serverpod are checking in pretty much every day and helping out as much as we can.

[You find the public discussion board here.](https://github.com/serverpod/serverpod/discussions)

## Reporting issues

Serverpod is a work in progress, and there may be issues that we aren't aware of. If you run into something that doesn't seem to work the way you expect it to, please file an issue so that we can get it fixed as soon as possible.

[You find the issue tracker here.](https://github.com/serverpod/serverpod/issues)

## Community updates
<!--
### November 2022 Release keynote
Keynote from the Serverpod 1.0 release event. Gives an overview of the main features of Serverpod, demos, contributions from the community, and more.

<div style={{ position : 'relative', paddingBottom : '56.25%', height : '0' }}><iframe style={{ position : 'absolute', top : '0', left : '0', width : '100%', height : '100%' }} width="560" height="315" src="https://www.youtube-nocookie.com/embed/QN6juNWW3js" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-->
### July 2022 update
How Serverpod works, current progress and GUI demo, and job opportunities at Serverpod.

<div style={{ position : 'relative', paddingBottom : '56.25%', height : '0' }}><iframe style={{ position : 'absolute', top : '0', left : '0', width : '100%', height : '100%' }} width="560" height="315" src="https://www.youtube-nocookie.com/embed/4xMAZJ9Em_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
