versioned_docs/version-1.1.0/02-support.md
# Support & community

If you get stuck, you can get support through our Github community. The authors of Serverpod are checking in pretty much every day and helping out as much as we can.

__[You find the public discussion board here.](https://github.com/serverpod/serverpod/discussions)__

## Reporting issues

Serverpod is a work in progress, and there may be issues that we aren't aware of. If you run into something that doesn't seem to work the way you expect it to, please file an issue so that we can get it fixed as soon as possible.

__[You find the issue tracker here.](https://github.com/serverpod/serverpod/issues)__

## Stay up-to-date

We set up a mailing list to keep you up-to-date with any news and updates around Serverpod. We send an email about once a month or when something significant happens.

__[Join the email list here.](https://serverpod.news)__

## Community updates

### April 2023 update
An update on the progress of Serverpod and info on the 1.1 update.

<div style={{ position : 'relative', paddingBottom : '56.25%', height : '0' }}><iframe style={{ position : 'absolute', top : '0', left : '0', width : '100%', height : '100%' }} width="560" height="315" src="https://www.youtube-nocookie.com/embed/P3SoZnFtOOw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>

### January 2023 Release keynote
Keynote from the Serverpod 1.0 release event. Gives an overview of the main features of Serverpod, demos, contributions from the community, and more.

<div style={{ position : 'relative', paddingBottom : '56.25%', height : '0' }}><iframe style={{ position : 'absolute', top : '0', left : '0', width : '100%', height : '100%' }} width="560" height="315" src="https://www.youtube-nocookie.com/embed/QN6juNWW3js" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>

### July 2022 update
How Serverpod works, current progress and GUI demo, and job opportunities at Serverpod.

<div style={{ position : 'relative', paddingBottom : '56.25%', height : '0' }}><iframe style={{ position : 'absolute', top : '0', left : '0', width : '100%', height : '100%' }} width="560" height="315" src="https://www.youtube-nocookie.com/embed/4xMAZJ9Em_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
